<resources>
    <string name="app_name">Student Survival App</string>
    <string name="health">Health and Wellbeing</string>
    <string name="healthPageTV">"Welcome to Health and Wellbeing "</string>
    <string name="healthButton">Health and Wellbeing</string>
    <string name="budgetButton">Budgeting</string>
    <string name="emergencyButton">Emergency Contacts</string>
    <string name="cookButton">How to Cook?</string>
    <string name="timeButton">Time Management Tips</string>
    <string name="usefulOne">Useful Link</string>
    <string name="usefulTwo">Useful Link 2</string>
    <string name="usefulThree">Useful Link 3</string>
    <string name="usefulFour">Useful Link 4</string>
    <string name="tipsOne">Useful Video1</string>
    <string name="tipsTwo">Useful Video2</string>
    <string name="tipsThree">Useful Link</string>
    <string name="tipsFour">Useful link</string>
    <string name="recipeOne">Recipes List 1</string>
    <string name="recipeTwo">Recipes List 2</string>
    <string name="recipeThree">Recipes List 3</string>
    <string name="recipeFour">Video 1</string>
    <string name="recipeFive">Video 2</string>
    <string name="timeOne">Tips Link1</string>
    <string name="timeTwo">Tips Link2</string>
    <string name="timeThree">Useful Video 1</string>
    <string name="timeFour">Useful Video 2</string>
    <string name="videosButton">Useful Videos</string>
    <string name="playButton">"Play "</string>
    <string name="studyButton">Study Skills</string>
    <string name="editTextTextMultiLines">"•\tGetting Organised to Study. Getting organised is an important first step to effective study •\tFinding Time to Study •\tSources of Information for Study. •\tStyles of Writing. •\tEffective Reading. •\tCritical Reading and Reading Strategies. •\tNote-Taking. •\tPlanning an Essay. •\tEssay Writing •\tEssay Writing •\tWrite a Dissertation or Thesis •\tWorking on a dissertation •\tAcademic Referencing •\tAssignment Finishing Touches •\tRevision Skills "</string>
    <string name="editTextMultiLine">Study skills are the skills you need to enable you to study and learn efficiently, they are an important set of transferable life skills.</string>
    <string name="editTextTextMultiLine2">Study Skills Pages Include: Getting Organised to Study, Finding Time to Study, Sources of Information for Study, Styles of Writing, Effective Reading, Critical Reading, and Reading Strategies, Note Taking, Planning an Essay, Essay Writing, Essay Writing, write a Dissertation or Thesis, Working on a dissertation Academic Referencing, Assignment Finishing Touches, Revision Skills.</string>
    <string name="usefulButtonOne">"Useful Link For Study Skills "</string>
    <string name="editTextTextLines2">Study Skills Include: Getting Organised to Study, Finding Time to Study, Sources of Information for Study, Styles of Writing, Effective Reading, Critical Reading, and Reading Strategies, Note Taking, Planning an Essay, Essay Writing, Essay Writing, write a Dissertation or Thesis, Working on a dissertation Academic Referencing, Assignment Finishing Touches, Revision Skills.</string>
    <string name="editTextCall" />
    <string name="textViewintro">Budgeting is important for your financial stability, ensuring you can pay common expenses like rent, tuition, student loans, credit card bills, and entertainment.</string>
    <string name="textViewemerg"><![CDATA["[International Emergency Number is: 112. The fire, ambulance and police services in Ireland and Northern Ireland are all contactable via the above 112 & 999. When calling emergency services, you will be asked to provide the following: [The exact address of the incident or emergency and/or any noticeable landmarks nearby]. [Directions to the scene of the emergency] [The telephone number you are calling from] [Details on the incident itself, the number of persons involved, the description, any visible injuries and knowledge of any pre-existing medical conditions] {Try to stay calm and listen to the call taker’s instructions} {It is also important to keep your own phone on as the emergency service may need to contact you for further information. "]]></string>
    <string name="editTextTextMultiLine3"><![CDATA["[International Emergency Number is: 112. The fire, ambulance and police services in Ireland and Northern Ireland are all contactable via the above 112 & 999. When calling emergency services, you will be asked to provide the following: [The exact address of the incident or emergency and/or any noticeable landmarks nearby]. [Directions to the scene of the emergency] [The telephone number you are calling from] [Details on the incident itself, the number of persons involved, the description, any visible injuries and knowledge of any pre-existing medical conditions] {Try to stay calm and listen to the call taker’s instructions} {It is also important to keep your own phone on as the emergency service may need to contact you for further information. "]]></string>
</resources>