<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/budgetbg"
    tools:context=".BudgetActivity">

    <Button
        android:id="@+id/tipsOne"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="27dp"
        android:text="@string/tipsOne"
        app:layout_constraintBottom_toTopOf="@+id/tipsTwo"
        app:layout_constraintEnd_toEndOf="@+id/tipsTwo"
        app:layout_constraintStart_toStartOf="@+id/tipsTwo"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tipsTwo"
        android:layout_width="173dp"
        android:layout_height="0dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="26dp"
        android:text="@string/tipsTwo"
        app:layout_constraintBottom_toTopOf="@+id/tipsThree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipsOne" />

    <Button
        android:id="@+id/tipsThree"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="54dp"
        android:text="@string/tipsThree"
        app:layout_constraintBottom_toTopOf="@+id/tipsFour"
        app:layout_constraintEnd_toEndOf="@+id/tipsTwo"
        app:layout_constraintStart_toStartOf="@+id/tipsTwo"
        app:layout_constraintTop_toBottomOf="@+id/tipsTwo" />

    <Button
        android:id="@+id/tipsFour"
        android:layout_width="171dp"
        android:layout_height="0dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="115dp"
        android:text="@string/tipsFour"
        app:layout_constraintBottom_toTopOf="@+id/textViewintro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipsThree" />

    <TextView
        android:id="@+id/textViewintro"
        android:layout_width="340dp"
        android:layout_height="86dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:background="@color/teal_200"
        android:text="@string/textViewintro"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipsFour" />
</androidx.constraintlayout.widget.ConstraintLayout>