<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cookingbg"
    tools:context=".CookingActivity">

    <Button
        android:id="@+id/recipeOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/recipeOne"
        app:backgroundTint="@android:color/holo_orange_light"
        app:layout_constraintBottom_toBottomOf="@+id/recipeTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recipeTwo" />

    <Button
        android:id="@+id/recipeTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="16dp"
        android:text="@string/recipeTwo"
        app:backgroundTint="@android:color/holo_orange_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/recipeThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="23dp"
        android:text="@string/recipeThree"
        app:backgroundTint="@android:color/holo_orange_light"
        app:layout_constraintBottom_toTopOf="@+id/recipeFour"
        app:layout_constraintEnd_toEndOf="@+id/recipeFour" />

    <Button
        android:id="@+id/recipeFour"
        android:layout_width="146dp"
        android:layout_height="46dp"
        android:layout_marginBottom="127dp"
        android:text="@string/recipeFour"
        app:backgroundTint="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/recipeFive"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="58dp"
        android:text="@string/recipeFive"
        app:backgroundTint="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/recipeThree"
        app:layout_constraintStart_toStartOf="@+id/recipeFour"
        app:layout_constraintTop_toTopOf="@+id/recipeFour" />

</androidx.constraintlayout.widget.ConstraintLayout>