<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/timemanagementtipsdiagram"
    tools:context=".TimeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/timeThree"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:text="@string/timeThree"
            android:textSize="12sp"
            app:backgroundTint="@android:color/holo_orange_dark" />

        <Button
            android:id="@+id/timeFour"
            android:layout_width="201dp"
            android:layout_height="52dp"
            android:layout_marginEnd="16dp"
            android:text="@string/timeFour"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"></LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/timeOne"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="2dp"
        android:text="@string/timeOne"
        android:textSize="12sp"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/timeTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/timeTwo" />

    <Button
        android:id="@+id/timeTwo"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginEnd="7dp"
        android:text="@string/timeTwo"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/timeOne" />

</androidx.constraintlayout.widget.ConstraintLayout>